--- a/installer/resources/themes/console/midnight/console.css
+++ b/installer/resources/themes/console/midnight/console.css
@@ -416,9 +416,6 @@ p:empty + .sb_notice{margin-top:10px}
 .sb_netstatus.running:hover,.sb_netstatus.hidden:hover,.sb_netstatus.firewalled:hover,.sb_netstatus.testing:hover{font-size:inherit}
 
 /* tunnel build status */
-#bandwidthTestRunning{margin:-4px 0;padding:7px 3px;width:100%;display:inline-block;vertical-align:middle;color:#dd8;text-shadow:0 1px 1px #000;box-shadow:0 0 0 1px #337,var(--highlight),inset 0 0 2px 1px #26235c;background:#001;box-sizing:border-box}
-
-/* tunnel build status */
 .tunnelBuildStatus{font-size:90%;color:#393}
 .tunnelBuildStatus::before{margin:0 0 -1px;width:16px;height:16px;display:inline-block;border-radius:50%;content:"";transform:scale(.7)}
 .tunnelBuildStatus.accepting::before{background:var(--tunn_ready) no-repeat center center / 15px}
@@ -435,6 +432,28 @@ p:empty + .sb_notice{margin-top:10px}
 #updateAvailable + br + button + br + #updateAvailable::before{margin:4px 0;content:"";display:inline-block;height:1px;background:#113;width:calc(100% - 20px)}
 #updateAvailable + br + button + br + #updateAvailable{margin-top:2px}
 #updateAvailable + br + button + br + #updateAvailable + br + button{margin-bottom:5px}
+
+/* section toggler */
+#sidebar h3{position:relative}
+.toggleSection{position:absolute;top:-4px;right:-4px;bottom:-4px;height:calc(100% + 8px);min-height:32px;width:32px;background:#002 var(--dropdown) no-repeat center calc(50% - 2px) / 10px;appearance:none;box-shadow:none;border-left:var(--border);display:none}
+h3:hover .toggleSection{display:inline-block;z-index:999}
+.toggleSection:checked{transform:scaleY(-1);background-position:center calc(50% + 2px)}
+.toggleSection:not(:checked){padding-top:6px}
+.toggleSection:active{box-shadow:var(--btn_shadow_active);background-color:var(--hover)}
+.toggleSection:checked:active{box-shadow:var(--highlight),inset 3px -3px 3px 3px rgba(0,0,0,.8),0 0 0 1px #000}
+#sidebar h3 a .badge:not([hidden]),#tunnelCount{white-space:nowrap;letter-spacing:.01em;word-spacing:-.02em;text-transform:lowercase;background:var(--badge);border-radius:1px;font-size:80%;padding:2px 5px 1px;display:inline-block;box-shadow:0 0 0 1px #26235c,0 0 0 1px #000 inset}
+#sidebar h3:hover a .badge,h3:hover #tunnelCount{color:var(--hover);box-shadow:0 0 0 1px var(--hover),0 0 0 1px #000 inset}
+#tunnelCount+#tunnelCount{display:none}
+#sb_updatesection.collapsed > *:not(h3) {display:none}
+#sb_updatesection h3.collapsed a::after{content:"*"}
+#updatespinner{display:inline-block;height:20px;width:20px;background:var(--update) no-repeat fixed center center / 20px;animation: spin 3s ease 0s both}
+#sidebar #localtunnelsActive,#sidebar #localtunnelsActive td{text-align:center!important;background:none;padding:3px 0!important;line-height:16px;vertical-align:middle!important;text-align:center}
+#sidebar #localtunnelsActive span{display:inline-block;font-size:90%;font-weight:600;text-transform:lowercase;vertical-align:middle!important;margin:1px 4px;line-height:16px;width:auto;letter-spacing:2px}
+#sidebar #localtunnelsActive span.count_0{display:none}
+#sidebar #localtunnelsActive img {width:16px;height:16px;line-height:16px;margin:0 0 0 -2px;vertical-align:middle;display:inline-block}
+#sidebar #localtunnelSummary{margin:-7px auto -8px}
+.sb_icon,#sb_internals.collapsed,#sb_services.collapsed,#sb_advanced.collapsed, #sidebar table.collapsed+hr{display:none!important}
+#sidebar table.collapsed + hr{display:block!important}
 
 /* news */
 div[id^="config_"].main{padding-bottom:14px}
@@ -476,27 +495,6 @@ div[id^="config_"].main{padding-bottom:14px}
 #news li{margin:6px 0;padding-left:3px}
 
 #config_ui,#netdb{padding-bottom:3px}
-
-/* section toggler */
-#sidebar h3{position:relative}
-.toggleSection{position:absolute;top:-4px;right:-4px;bottom:-4px;height:calc(100% + 8px);min-height:32px;width:32px;background:#002 var(--dropdown) no-repeat center calc(50% - 2px) / 10px;appearance:none;box-shadow:none;border-left:var(--border);display:none}
-h3:hover .toggleSection{display:inline-block;z-index:999}
-.toggleSection:checked{transform:scaleY(-1);background-position:center calc(50% + 2px)}
-.toggleSection:not(:checked){padding-top:6px}
-.toggleSection:active{box-shadow:var(--btn_shadow_active);background-color:var(--hover)}
-.toggleSection:checked:active{box-shadow:var(--highlight),inset 3px -3px 3px 3px rgba(0,0,0,.8),0 0 0 1px #000}
-#sidebar h3 a .badge:not([hidden]),#tunnelCount{white-space:nowrap;letter-spacing:.01em;word-spacing:-.02em;text-transform:lowercase;background:var(--badge);border-radius:1px;font-size:80%;padding:2px 5px 1px;display:inline-block;box-shadow:0 0 0 1px #26235c,0 0 0 1px #000 inset}
-#sidebar h3:hover a .badge,h3:hover #tunnelCount{color:var(--hover);box-shadow:0 0 0 1px var(--hover),0 0 0 1px #000 inset}
-#tunnelCount+#tunnelCount{display:none}
-#sb_updatesection.collapsed > *:not(h3) {display:none}
-#sb_updatesection h3.collapsed a::after{content:"*"}
-#updatespinner{display:inline-block;height:20px;width:20px;background:var(--update) no-repeat fixed center center / 20px;animation: spin 3s ease 0s both}
-#sidebar #localtunnelsActive,#sidebar #localtunnelsActive td{text-align:center!important;background:none;padding:3px 0!important;line-height:16px;vertical-align:middle!important;text-align:center}
-#sidebar #localtunnelsActive span{display:inline-block;font-size:90%;font-weight:600;text-transform:lowercase;vertical-align:middle!important;margin:1px 4px;line-height:16px;width:auto;letter-spacing:2px}
-#sidebar #localtunnelsActive span.count_0{display:none}
-#sidebar #localtunnelsActive img {width:16px;height:16px;line-height:16px;margin:0 0 0 -2px;vertical-align:middle;display:inline-block}
-#sidebar #localtunnelSummary{margin:-7px auto -8px}
-.sb_icon,#sb_internals.collapsed,#sb_services.collapsed,#sb_advanced.collapsed, #sidebar table.collapsed+hr{display:none!important}
 
 /* top navigation */
 .confignav{margin:-1px -11px 15px;padding:7px 5px 8px;line-height:1.3;text-align:center;font-weight:700;border:var(--border);background:linear-gradient(to bottom,rgba(0,0,64,.15),rgba(0,0,48,.15) 50%,rgba(0,0,32,.15) 50%,rgba(0,0,16,.15)),var(--th);background-size:100%,100% 4px,4px 100%}
